# CodeDev

./: .gitignore  DEV_EN.md  Dev.md  LICENSE  NOTICES.md  README.md  README.zh-CN.md  README_EN.md  USAGE.md  USAGE_EN.md  analysis.md  index.html  mobile.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  update-prompts.yml
models/: models.json
public/: manifest.json
src/: App.tsx  SpotlightApp.tsx  index.css  main.tsx  mobile.tsx
src-tauri/: Cargo.toml  codeforge.db  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/data/: config.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V2__add_memos_and_files.sql
src-tauri/src/: apps.rs  db.rs  export.rs  files.rs  git.rs  main.rs  memo.rs  monitor.rs
src-tauri/src/context/: commands.rs  mod.rs  tokenizer.rs
src-tauri/src/db/: init.rs  mod.rs
src-tauri/src/env_probe/: binaries.rs  browsers.rs  common.rs  ides.rs  mod.rs  npm.rs  scan_logic.rs  scanners.rs  sdks.rs  system.rs  traits.rs
src-tauri/src/gitleaks/: allowlist.rs  mod.rs  rule.rs  rules_cloud.rs
src-tauri/src/hyperview/: mod.rs  protocol.rs  sniffer.rs
src-tauri/src/server/: mod.rs
src/api/: sync.ts
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/settings/: AboutSection.tsx  IgnoredSecretsManager.tsx  PromptLibraryManager.tsx  SettingsModal.tsx
src/components/ui/: ClockPopover.tsx  CodeBlock.tsx  (+4 more)
src/lib/: calculator.ts  command_executor.ts  comment_stripper.ts  context_analytics.ts  context_assembler.ts  fs_helper.ts  hooks.ts  i18n.ts  llm.ts  network.ts  patch_parser.ts  storage.ts  template.ts  tokenizer.ts  tree_generator.ts  tree_utils.ts
src/store/: useAppStore.ts  useConfirmStore.ts  useContextStore.ts  usePreviewStore.ts  usePromptStore.ts
src/types/: context.ts  hyperview.ts  model.ts  monitor.ts  prompt.ts  spotlight.ts
(+43 files in other folders)
